--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"file-loader": "~0.11.2",
 		"html-webpack-plugin": "~2.30.1",
 		"image-webpack-loader": "^3.3.1",
-		"node-sass": "~4.5.3",
+		"node-sass": "^4.13.1",
 		"postcss-loader": "~1.3.3",
 		"postcss-smart-import": "~0.7.5",
 		"precss": "~2.0.0",
@@ -43,7 +43,7 @@
 		"webpack-dev-server": "~2.7.1"
 	},
 	"dependencies": {
-		"axios": "^0.16.2",
+		"axios": "^0.19.2",
 		"classnames": "^2.2.5",
 		"flexboxgrid": "^6.3.1",
 		"google-map-react": "^0.24.0",
