--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.0",
   "description": "React application for viewing weather repots",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wsfuller/react-weather.git"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -18,22 +22,21 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@fluentui/react": "^7.115.3",
-    "@uifabric/fluent-theme": "^7.1.84",
-    "@uifabric/icons": "^7.3.44",
+    "@fluentui/react": "^7.117.3",
+    "@uifabric/fluent-theme": "^7.1.91",
+    "@uifabric/icons": "^7.3.48",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "google-map-react": "^0.24.0",
+    "google-map-react": "^1.1.7",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^4.4.1",
+    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.2.0"
   },
   "browserslist": {
