--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "weather-icons-react": "^1.2.0"
   },
   "browserslist": {
     "production": [
