--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^7.117.3",
+    "@fluentui/react-theme-provider": "^0.16.4",
     "@uifabric/fluent-theme": "^7.1.91",
     "@uifabric/icons": "^7.3.48",
     "axios": "^0.19.2",
